src/test/ui-fulldeps/session-diagnostic/subdiagnostic-derive.stderr
error: label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:47:1
   |
LL | / #[label(parser::add_paren)]
LL | |
LL | | struct C {
LL | |     var: String,
LL | | }
   | |_^

error: `#[label]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:54:1
   |
LL | #[label]
   | ^^^^^^^^

error: `#[foo]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:63:1
   |
LL | #[foo]
   | ^^^^^^

error: `#[label = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:73:1
   |
LL | #[label = "..."]
   | ^^^^^^^^^^^^^^^^

error: `#[label(bug = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:82:9
   |
LL | #[label(bug = "...")]
   |         ^^^^^^^^^^^
   |
   = help: first argument of the attribute should be the diagnostic slug

error: `#[label("...")]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:91:9
   |
LL | #[label("...")]
   |         ^^^^^
   |
   = help: first argument of the attribute should be the diagnostic slug

error: `#[label(slug = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:100:9
   |
LL | #[label(slug = 4)]
   |         ^^^^^^^^
   |
   = help: first argument of the attribute should be the diagnostic slug

error: `#[label(slug(...))]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:109:9
   |
LL | #[label(slug("..."))]
   |         ^^^^^^^^^^^
   |
   = help: first argument of the attribute should be the diagnostic slug

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:128:1
   |
LL | #[label()]
   | ^^^^^^^^^^

error: `code` is not a valid nested attribute of a `label` attribute
  --> $DIR/subdiagnostic-derive.rs:137:28
   |
LL | #[label(parser::add_paren, code = "...")]
   |                            ^^^^^^^^^^^^

error: `applicability` is not a valid nested attribute of a `label` attribute
  --> $DIR/subdiagnostic-derive.rs:146:28
   |
LL | #[label(parser::add_paren, applicability = "machine-applicable")]
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive.rs:155:1
   |
LL | #[foo]
   | ^^^^^^

error: `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:169:5
   |
LL |     #[bar]
   |     ^^^^^^

error: `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:181:5
   |
LL |     #[bar = "..."]
   |     ^^^^^^^^^^^^^^

error: `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:193:5
   |
LL |     #[bar = 4]
   |     ^^^^^^^^^^

error: `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:205:5
   |
LL |     #[bar("...")]
   |     ^^^^^^^^^^^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:217:5
   |
LL |     #[label(code = "...")]
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: subdiagnostic kind not specified
  --> $DIR/subdiagnostic-derive.rs:234:5
   |
LL |     B {
   |     ^

error: the `#[primary_span]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:246:5
   |
LL |     #[primary_span]
   |     ^^^^^^^^^^^^^^^

error: label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:243:1
   |
LL | / #[label(parser::add_paren)]
LL | |
LL | | struct W {
LL | |     #[primary_span]
LL | |
LL | |     span: String,
LL | | }
   | |_^

error: `#[applicability]` is only valid on suggestions
  --> $DIR/subdiagnostic-derive.rs:256:5
   |
LL |     #[applicability]
   |     ^^^^^^^^^^^^^^^^

error: `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:266:5
   |
LL |     #[bar]
   |     ^^^^^^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:277:5
   |
LL |     #[bar = "..."]
   |     ^^^^^^^^^^^^^^

error: `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:288:5
   |
LL |     #[bar("...")]
   |     ^^^^^^^^^^^^^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: unexpected unsupported untagged union
  --> $DIR/subdiagnostic-derive.rs:304:1
   |
LL | / union AC {
LL | |
LL | |     span: u32,
LL | |     b: u64
LL | | }
   | |_^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:313:1
   |
LL | #[label(parser::add_paren)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:311:1
   |
LL | #[label(parser::add_paren)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[label(parser::add_paren)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:321:28
   |
LL | #[label(parser::add_paren, parser::add_paren)]
   |                            ^^^^^^^^^^^^^^^^^
   |
   = help: a diagnostic slug must be the first argument to the attribute

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:334:5
   |
LL |     #[primary_span]
   |     ^^^^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:331:5
   |
LL |     #[primary_span]
   |     ^^^^^^^^^^^^^^^

error: subdiagnostic kind not specified
  --> $DIR/subdiagnostic-derive.rs:340:8
   |
LL | struct AG {
   |        ^^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:377:47
   |
LL | #[suggestion(parser::add_paren, code = "...", code = "...")]
   |                                               ^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:377:33
   |
LL | #[suggestion(parser::add_paren, code = "...", code = "...")]
   |                                 ^^^^^^^^^^^^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:395:5
   |
LL |     #[applicability]
   |     ^^^^^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:392:5
   |
LL |     #[applicability]
   |     ^^^^^^^^^^^^^^^^

error: the `#[applicability]` attribute can only be applied to fields of type `Applicability`
  --> $DIR/subdiagnostic-derive.rs:405:5
   |
LL |     #[applicability]
   |     ^^^^^^^^^^^^^^^^

error: suggestion without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:418:1
   |
LL | #[suggestion(parser::add_paren)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid applicability
  --> $DIR/subdiagnostic-derive.rs:428:46
   |
LL | #[suggestion(parser::add_paren, code ="...", applicability = "foo")]
   |                                              ^^^^^^^^^^^^^^^^^^^^^

error: suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:446:1
   |
LL | / #[suggestion(parser::add_paren, code = "...")]
LL | |
LL | | struct AR {
LL | |     var: String,
LL | | }
   | |_^

error: unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive.rs:460:1
   |
LL | #[label]
   | ^^^^^^^^

error: `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive.rs:480:39
   |
LL | #[suggestion(parser::add_paren, code ="{var}", applicability = "machine-applicable")]
   |                                       ^^^^^^^

error: `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive.rs:499:43
   |
LL |     #[suggestion(parser::add_paren, code ="{var}", applicability = "machine-applicable")]
   |                                           ^^^^^^^

error: `#[suggestion_part]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:522:5
   |
LL |     #[suggestion_part]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions, use `#[primary_span]` instead

error: `#[suggestion_part(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:525:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions

error: suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:519:1
   |
LL | / #[suggestion(parser::add_paren, code = "...")]
LL | |
LL | | struct BA {
LL | |     #[suggestion_part]
...  |
LL | |     var: String,
LL | | }
   | |_^

error: `code` is not a valid nested attribute of a `multipart_suggestion` attribute
  --> $DIR/subdiagnostic-derive.rs:534:43
   |
LL | #[multipart_suggestion(parser::add_paren, code = "...", applicability = "machine-applicable")]
   |                                           ^^^^^^^^^^^^

error: multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive.rs:534:1
   |
LL | / #[multipart_suggestion(parser::add_paren, code = "...", applicability = "machine-applicable")]
LL | |
LL | |
LL | | struct BBa {
LL | |     var: String,
LL | | }
   | |_^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:544:5
   |
LL |     #[suggestion_part]
   |     ^^^^^^^^^^^^^^^^^^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:552:5
   |
LL |     #[suggestion_part()]
   |     ^^^^^^^^^^^^^^^^^^^^

error: `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:561:5
   |
LL |     #[primary_span]
   |     ^^^^^^^^^^^^^^^
   |
   = help: multipart suggestions use one or more `#[suggestion_part]`s rather than one `#[primary_span]`

error: multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive.rs:558:1
   |
LL | / #[multipart_suggestion(parser::add_paren)]
LL | |
LL | | struct BC {
LL | |     #[primary_span]
LL | |
LL | |     span: Span,
LL | | }
   | |_^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:569:5
   |
LL |     #[suggestion_part]
   |     ^^^^^^^^^^^^^^^^^^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:572:5
   |
LL |     #[suggestion_part()]
   |     ^^^^^^^^^^^^^^^^^^^^

error: `#[suggestion_part(foo = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:575:23
   |
LL |     #[suggestion_part(foo = "bar")]
   |                       ^^^^^^^^^^^
   |
   = help: `code` is the only valid nested attribute

error: the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:578:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:581:5
   |
LL |     #[suggestion_part()]
   |     ^^^^^^^^^^^^^^^^^^^^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:589:37
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                                     ^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:589:23
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                       ^^^^^^^^^^^^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:619:5
   |
LL |     #[applicability]
   |     ^^^^^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:616:43
   |
LL | #[multipart_suggestion(parser::add_paren, applicability = "machine-applicable")]
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive.rs:63:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive.rs:155:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:169:7
   |
LL |     #[bar]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:181:7
   |
LL |     #[bar = "..."]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:193:7
   |
LL |     #[bar = 4]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:205:7
   |
LL |     #[bar("...")]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:266:7
   |
LL |     #[bar]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:277:7
   |
LL |     #[bar = "..."]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:288:7
   |
LL |     #[bar("...")]
   |       ^^^

error[E0425]: cannot find value `slug` in module `rustc_errors::fluent`
  --> $DIR/subdiagnostic-derive.rs:118:9
   |
LL | #[label(slug)]
   |         ^^^^ not found in `rustc_errors::fluent`

error: aborting due to 64 previous errors

For more information about this error, try `rustc --explain E0425`.
